--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -109,9 +109,18 @@
 
 	<div class="page">
 
-		<div class="page__content"
+		<!-- TO DO: Tania to clean this -->
+		<!-- <div class="page__content"
 			data-page-title="{% if page.url == "/" %}{{ site.data.settings.basic_settings.site_title }} – {{ page.title }}{% else %}{{ page.title }} – {{ site.data.settings.basic_settings.site_title }}{% endif %}"
 			data-image="{page.featured_image | relative_url}">
+
+			{{ content }}
+
+		</div>
+		 -->
+		<div class="page__content"
+			data-page-title="{% if page.url == "/" %}{{ site.data.settings.basic_settings.site_title }} – {{ page.title }}{% else %}{{ page.title }} – {{ site.data.settings.basic_settings.site_title }}{% endif %}"
+			data-image="/images/side.svg">
 
 			{{ content }}
 
