--- a/_sass/_basic.scss
+++ b/_sass/_basic.scss
@@ -198,12 +198,13 @@ blockquote {
 
 a {
 	text-decoration: none;
-	color: $text-dark-color;
+	color: $accent-color;
 	font-weight: $bold-weight;
 	@include transition(all 0.15s ease-in-out);
-
+	
 	&:hover {
 		color: $accent-color;
+		border-bottom: solid 2px $accent-color;
 	}
 }
 
