--- a/_sass/_basic.scss
+++ b/_sass/_basic.scss
@@ -203,8 +203,10 @@ a {
 	@include transition(all 0.15s ease-in-out);
 	
 	&:hover {
-		color: $accent-color;
-		border-bottom: solid 2px $accent-color;
+		color: #F9A26C;
+		text-decoration: underline;
+		text-decoration-color: #F9A26C;
+		text-decoration-style: dotted;
 	}
 }
 
